      matching by name in \code{log()}.

      \item \code{all.equal()} gains methods for \code{environment}s and
      \code{refClass}es.
      
      \item (Windows.) The command completion in \command{Rgui.exe}
      messed up the console.  This is an experimental fix; if it is reported
      to work it will be kept, otherwise it will be removed. (\PR{15791})
    }
  }
}

\section{\Rlogo CHANGES IN R 3.1.2 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The internal method of \code{download.file()} can now handle
      files larger than 2GB on 32-bit builds which support such files
      (tested on 32-bit \R running on 64-bit Windows).

      \item \code{kruskal.test()} warns on more types of suspicious input.

      \item The \code{as.dendrogram} method for \code{"hclust"} objects
      gets a \code{check} argument protecting against memory explosion for
      invalid inputs.
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item (Windows.) \command{Rscript.exe} was missing a
      manifest specifying the modern style for common controls (e.g.,
      the download progress bar).

      \item If a package had extra documentation files but no vignette,
      the HTML help system produced an empty index page.
      
      \item The parser now gives an error if a null character is included
      in a string using Unicode escapes. (\PR{16046})

      \item \code{qr.Q()} failed on complex arguments due to 
      pre-3.0(!) typo. (\PR{16054}) 
      
      \item \code{abs()} failed with named arguments when the argument
      was complex.  (\PR{16047})
      
      \item \code{"noquote"} objects may now be used as columns in 
      dataframes.  (\PR{15997})
      
      \item Some values with extremely long names were printed 
      incorrectly.  (\PR{15999})
      
      \item Extremely large exponents on zero expressed in scientific
      notation (e.g. \code{0.0e50000}) could give \code{NaN}.  (\PR{15976})
    }
  }
}
