@@ -223,6 +223,9 @@
       \item (Windows.) The command completion in \command{Rgui.exe}
       messed up the console.  This is an experimental fix; if it is reported
       to work it will be kept, otherwise it will be removed. (\PR{15791})
+      
+      \item \code{drop.terms()} dropped some of the attributes of the
+      object it was working with.  (\PR{16029})
     }
   }
 }
